Se inicializo las bases y se asentaron, tanto un sistema auth y sus bases, una pantalla de login y su splash screen ademas de asignar las basespara

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "wereable_app",
-    "short_name": "wereable_app",
+    "name": "flutter_map",
+    "short_name": "flutter_map",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
