--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "flutter_map" "\0"
+            VALUE "FileDescription", "gps" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutter_map" "\0"
+            VALUE "InternalName", "gps" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flutter_map.exe" "\0"
-            VALUE "ProductName", "flutter_map" "\0"
+            VALUE "OriginalFilename", "gps.exe" "\0"
+            VALUE "ProductName", "gps" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
