--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_map: ^3.1.0
+  geolocator: ^9.0.2
+  latlong2: ^0.8.1
 
 
   # The following adds the Cupertino Icons font to your application.
